# apple-health-parser

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage.yaml  docs.yaml  publish.yaml  release.yaml
apple_health_parser/: consts.py  decorators.py  exceptions.py
apple_health_parser/config/: definitions.py  flags.yaml
apple_health_parser/interfaces/: plot_interface.py  preprocessor_interface.py
apple_health_parser/models/: parsed.py  records.py
apple_health_parser/plot/: __init__.py  overviews.py  plots.py  sleep.py
apple_health_parser/scripts/: main.py
apple_health_parser/scripts/export/: main.py
apple_health_parser/scripts/recap/: main.py  recap_data.py  recap_pdf.py  recap_plot.py  recap_stats.py
apple_health_parser/scripts/recap/metrics/: definitions.py  metrics.yaml
apple_health_parser/utils/: loader.py  logging.py  parser.py  preprocessor.py
docs/: index.md  installation.md  todo.md
docs/tutorial/: basics.md  cli.md  plots.md  scripts.md
docs/usage/: exceptions.md  flags.md  models.md
docs/usage/interfaces/: plot_interface.md  preprocessor_interface.md
docs/usage/utils/: loader.md  parser.md
docs/utils/: get_flags_md_table.py
tests/: conftest.py  test_cli.py  test_loader.py  test_models.py  test_overviews.py  test_parser.py  test_plots.py  test_preprocessor.py  test_sleep_plots.py
tests/data/: export.xml
