[project]
name = "apple-health-parser"
version = "1.1.2"
description = "Python package to parse, analyse, and plot Apple HealthKit data"
authors = [
    { name = "Alexandre Cirilo", email = "38657258+alxdrcirilo@users.noreply.github.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "kaleido==0.2.1",
    "pandas>=2.2.2",
    "plotly>=5.22.0",
    "pydantic>=2.7.1",
    "pyyaml>=6.0.1",
    "pydantic-extra-types>=2.10.5",
]

[project.optional-dependencies]
dev = [
    "ipdb>=0.13.13",
    "mkdocs-material>=9.5.24",
    "mkdocstrings[python]>=0.25.1",
    "mypy>=1.19.1",
    "pyclean>=3.0.0",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.4",
    "termynal>=0.12.1",
    "types-pyyaml>=6.0.12",
]

[project.scripts]
cli = "apple_health_parser.scripts.main:main"

[project.urls]
Repository = "https://github.com/alxdrcirilo/apple-health-parser"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apple_health_parser"]

[tool.coverage.run]
omit = [
    "apple_health_parser/scripts/main.py",
]

[tool.semantic_release]
tag_format = "{version}"
version_toml = ["pyproject.toml:project.version"]
major_on_zero = false
upload_to_PyPI = false
upload_to_release = true

[tool.ruff.lint]
select = ["I", "F401"]

[tool.mypy]
ignore_missing_imports = true
